--- a/index.html
+++ b/index.html
@@ -3,40 +3,263 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="styles.css" />
     <title>Using Bootstrap Assignment</title>
   </head>
   <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+      <a class="navbar-brand" href="#">Cult-ish</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Recruit</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sacrifice</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="SSN here"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+            Look yourself up
+          </button>
+        </form>
+      </div>
+    </nav>
 
+    <!-- Hero Section -->
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-1">Join us...</h1>
+        <p class="lead"><b>Ever wonder what "it" is? Do you think you have "it"?</b> </p>
+        <hr class="my-4" />
+        <p><b>You can find out what we're looking for and more... just click the
+            button below!</b>
+          
+        </p>
+        <p class="lead">
+          <button
+            type="button"
+            class="btn btn-lg btn-danger"
+            data-toggle="popover"
+            title="Really?"
+            data-content="You're tryna sell your soul?"
+          >
+            Learn more!
+          </button>
+        </p>
+      </div>
+    </div>
 
+    <!-- About Section -->
 
+    <div class="container">
+      <div class="row">
+        <div class="col"><h1>About us.</h1></div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-2">
+          <img src="images/guy.svg" alt="A Guy" width="120px" />
+        </div>
+        <div class="col-8">
+          <b>
+            We're a cult looking for "it". We'll search far and wide for "it"
+            and when we finally discover "it", everything WILL change.</b
+          >
+        </div>
+      </div>
+    </div>
+    <br /><br /><br />
+    <!-- Features Section -->
+    <div class="container">
+      <div class="row">
+        <div class="col"><h1>Features.</h1></div>
+      </div>
+      <br />
 
+      <div class="row">
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Food</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Free</h6>
+              <p class="card-text">
+                We'll provide you free food for the duration of your membership
+                (life).
+              </p>
+              <a href="#" class="card-link">JOIN</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Trips</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Free</h6>
+              <p class="card-text">
+                All "field trips" will be paid for. You'll never pay (or see) a
+                dime.
+              </p>
+              <br />
+              <a href="#" class="card-link">US</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Your mind</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Free</h6>
+              <p class="card-text">
+                You'll set your mind free with (forced) meditation.
+              </p>
+              <br />
+              <a href="#" class="card-link">NOW!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="container">
+      <section class="mb-4">
+        <h2 class="h1-responsive font-weight-bold  my-4">
+          Contact us
+        </h2>
 
+        <p class="text-center w-responsive mx-auto mb-5">
+          <b>
+            We need more meat.. er.. members. Cults dont just grow on trees. Reach out
+            now.</b
+          >
+        </p>
 
+        <div class="row justify-content-center">
+          <div class="col-md-9 mb-md-0 mb-5 ">
+            <form
+              id="contact-form"
+              name="contact-form"
+              action="mail.php"
+              method="POST"
+            >
+              <div class="row ">
+                <div class="col-md-6 ">
+                  <div class="md-form mb-0">
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      class="form-control"
+                    />
+                    <label for="name" class="">Your name</label>
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <input
+                      type="text"
+                      id="email"
+                      name="email"
+                      class="form-control"
+                    />
+                    <label for="email" class="">Your email</label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form mb-0">
+                    <input
+                      type="text"
+                      id="subject"
+                      name="subject"
+                      class="form-control"
+                    />
+                    <label for="subject" class="">Subject</label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form">
+                    <textarea
+                      type="text"
+                      id="message"
+                      name="message"
+                      rows="2"
+                      class="form-control md-textarea"
+                    ></textarea>
+                    <label for="message">Your message</label>
+                  </div>
+                </div>
+              </div>
+            </form>
+
+            <div class="text-center text-md-left">
+              <a
+                class="btn btn-primary"
+                onclick="document.getElementById('contact-form').submit();"
+                >Send</a
+              >
+            </div>
+            <div class="status"></div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <br><br><br>
+    <!-- Footer -->
+    <div class="container">
+        <div class="row justify-content-center">
+                <b>Copyrighted © 2023 by THIS_IS_YOUR_SIGN_TO_JOIN_US.</b>
+        </div>
+    </div>
+    <br /><br />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
-
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
   </body>
