--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-      <a class="navbar-brand" href="#">Cult-ish</a>
+      <a class="navbar-brand" href="#"><b>Cult-ish</b> </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,14 +37,14 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
+              ><b>Home</b> <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recruit</a>
+            <a class="nav-link" href="#"><b>Recruit</b> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sacrifice</a>
+            <a class="nav-link" href="#"><b>Sacrifice</b></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -89,13 +89,13 @@
 
     <div class="container">
       <div class="row">
-        <div class="col"><h1>About us.</h1></div>
+        <div class="col-sm"><h1>About us.</h1></div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-2">
+        <div class="col-sm-2">
           <img src="images/guy.svg" alt="A Guy" width="120px" />
         </div>
-        <div class="col-8">
+        <div class="col-sm-8">
           <b>
             We're a cult looking for "it". We'll search far and wide for "it"
             and when we finally discover "it", everything WILL change.</b
@@ -107,12 +107,12 @@
     <!-- Features Section -->
     <div class="container">
       <div class="row">
-        <div class="col"><h1>Features.</h1></div>
+        <div class="col-sm"><h1>Features.</h1></div>
       </div>
       <br />
 
       <div class="row">
-        <div class="col-4">
+        <div class="col-sm-4">
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <h5 class="card-title">Food</h5>
@@ -125,7 +125,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-sm-4">
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <h5 class="card-title">Trips</h5>
@@ -139,7 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-sm-4">
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <h5 class="card-title">Your mind</h5>
